argo cli 3.5.10; trivy-libs-wf.yaml s3 AFS

--- a/.argo/trivy-libs-wf.yaml
+++ b/.argo/trivy-libs-wf.yaml
@@ -6,6 +6,9 @@ metadata:
      stage: trivy-libs
      service: libs
 spec:
+  artifactRepositoryRef:
+    configMap: wl-artifactory-cm
+    key: workload-artifact-repository
   entrypoint: trivy-fs-scan
   arguments:
     parameters:
